--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "ng serve --open"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +22,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/xterm": "^3.0.0",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "jquery.terminal": "^1.15.0",
     "node-sass": "^4.9.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
